--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -8,18 +8,8 @@ packages :
 keywords:
   - nodejs
 script: |
-  export NODEVERSION=0.10.38
   sudo apt-get update
+  curl -sL https://deb.nodesource.com/setup_5.x | sudo -E bash -
+  sudo apt-get install -y nodejs
   sudo apt-get install wget build-essential
-  cd $HOME
-  mkdir nodeinstall
-  cd nodeinstall
-  wget http://nodejs.org/dist/v$NODEVERSION/node-v$NODEVERSION.tar.gz
-  tar xzf node-v$NODEVERSION.tar.gz
-  cd node-v$NODEVERSION
-  ./configure
-  make
-  sudo make install
-  cd $HOME
-  rm -fr nodeinstall
   node -v
